@@ -74,7 +74,7 @@ public class RebuildingScannerTestHelper {
         
         public TeardownListener instance() {
             try {
-                return tclass.newInstance();
+                return tclass.getDeclaredConstructor().newInstance();
             } catch (Exception e) {
                 throw new RuntimeException(e);
             }
